--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0-alpha2",
     "bootstrap-icons": "^1.10.3",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
