--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "bootstrap": "^5.3.0-alpha2",
-    "bootstrap-icons": "^1.10.3",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.4",
     "materialize-css": "^1.0.0-rc.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
