--- a/shipit-back/src/main/resources/application.properties
+++ b/shipit-back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # usuário e senha de conexão com o banco de dados
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=jOao2003
 # url de conexão do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/shipit?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=true&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 
