--- a/ShipIt-front/package.json
+++ b/ShipIt-front/package.json
@@ -25,6 +25,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "scss": "^0.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -39,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "schematics-scss-migrate": "^2.3.17",
     "typescript": "~4.9.4"
   }
 }
